# ColetorAutomacao

./: .gitignore  LICENSE.txt  README.md  coletor.py  pyproject.toml  requirements.txt
src/companies_scraper/: cli.py  config.py  scraper.py  selectors.py  utils.py
